# d2i-patch

./: LICENSE  README.md
js/: package.json
js/public/: index.html  (+1 more)
python/: .pre-commit-config.yaml  README.md  pyproject.toml
python/comrad/: __init__.py
python/comrad/app/: __init__.py  _app.py  _view.py
python/comrad/server/: __init__.py  _app.py  _component.py  _controller.py  _model.py  _page.py  _request.py  _router.py  _session.py  _view.py  components.py  exceptions.py
python/comrad/server/components/: __init__.py  _containers.py
python/comrad/util/: components.py
python/comrad_patch/: __init__.py  app.py  builder.py  components.py  controller.py  page.py
python/comrad_patch/tests/: test_app.py  test_code_text_converter.py  test_components.py  test_controller.py  test_page.py
python/comrad_patch/util/: code.py  files.py
python/d2i_patch/: _api.py  _controller.py  api.py  components.py  poc.py  state.py
python/d2i_patch/app/: __init__.py  _app.py  _base.py  _components.py  _view.py
python/d2i_patch/server/: __init__.py  _bootstrap.py  _server.py  _view.py
python/d2i_patch/util/: code.py  date.py  json.py
python/d2i_patch/views/: util.py
python/docs/: Untitled.ipynb  example-29-03-2023.ipynb  example-comrad_patch.ipynb  example-francisco.ipynb  simple-app.ipynb
python/patch/: __init__.py
python/patch/app/: __init__.py  exceptions.py  page.py
python/tests/: test_components.py  test_controller.py  test_fragment.py  test_module.py  test_run.py  test_to_json.py
python/tests/fixtures/: example001.yaml  example002.yaml  example003.yaml
(+32 files in other folders)
